[package]
name = "bevy_autotile_experiment"
version = "1.0.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", features = ["wayland"] }
bevy-inspector-egui = "0.25.2"
bevy_asset_loader = { version = "0.21.0", features = ["progress_tracking"] }
bevy_common_assets = { version = "0.11.0", features = ["ron"] }
bevy_mod_picking = "0.20.1"
iyes_perf_ui = "0.3.0"
iyes_progress = "0.12.0"
leafwing-input-manager = { version = "0.15.0", features = ["egui"] }
rand = "0.8.5"
serde = "1.0.210"
serde-big-array = "0.5.1"
tiny_bail = "0.3.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
